// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Payment renders PaymentMethod component showing payment method 1`] = `
<DocumentFragment>
  <div
    class="Payment"
  >
    <h1
      class="Section__Title"
    >
      Payment
    </h1>
    <div>
      <a
        href="/"
      >
        <button
          class="back-btn"
          type="button"
        >
          Back
        </button>
      </a>
    </div>
    <section
      class="FieldSet FieldSet--PaymentMethod"
    >
      <div
        class="FieldSet__Content"
      >
        <div
          class="FieldSet--EmptyState"
        >
          <svg
            fill="none"
            height="29"
            viewBox="0 0 28 29"
            width="28"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="#C4C4C4"
              height="5"
              rx="2.5"
              width="28"
            />
            <rect
              fill="#C4C4C4"
              height="5"
              rx="2.5"
              width="28"
              y="8"
            />
            <rect
              fill="#C4C4C4"
              height="5"
              rx="2.5"
              width="28"
              y="16"
            />
            <rect
              fill="#C4C4C4"
              height="5"
              rx="2.5"
              width="28"
              y="24"
            />
            <circle
              cx="2.5"
              cy="10.5"
              fill="white"
              r="1.5"
            />
            <circle
              cx="2.5"
              cy="2.5"
              fill="white"
              r="1.5"
            />
            <circle
              cx="2.5"
              cy="18.5"
              fill="white"
              r="1.5"
            />
            <circle
              cx="2.5"
              cy="26.5"
              fill="white"
              r="1.5"
            />
          </svg>
          To view payment options, complete filling in your address
        </div>
        <iframe
          data-bold-pigi-iframe="true"
          src=""
          style="height: 0px; display: none;"
          title="payments"
        />
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`Payment renders PaymentMethod component without showing payment method 1`] = `
<DocumentFragment>
  <div
    class="Payment"
  >
    <h1
      class="Section__Title"
    >
      Payment
    </h1>
    <div>
      <a
        href="/"
      >
        <button
          class="back-btn"
          type="button"
        >
          Back
        </button>
      </a>
    </div>
    <section
      class="FieldSet FieldSet--PaymentMethod"
    >
      <div
        class="FieldSet__Content"
      >
        <iframe
          data-bold-pigi-iframe="true"
          src=""
          style="height: 0px;"
          title="payments"
        />
      </div>
      <div
        class="FieldSet__Content"
      >
        <div
          class="DiscountLink"
        >
          Discount code
        </div>
      </div>
      <div
        class="FieldSet__Content"
      >
        <section
          class="FieldSet FieldSet--BillingAddress"
        >
          <div
            class="FieldSet__Header"
          >
            <h3>
              Billing address
            </h3>
          </div>
          <div
            class="FieldSet__Content"
          >
            <div
              class="stx-field stx-checkbox-field__field RadioButton"
            >
              <div
                class="stx-checkbox-field__div"
              >
                <span
                  class="stx-checkbox stx-checkbox--is-checked stx-checkbox-field__checkbox"
                >
                  <input
                    checked=""
                    class="stx-checkbox__input"
                    id="stxField1"
                    name="billing-address"
                    type="checkbox"
                    value="SAME_AS_SHIPPING_ADDRESS"
                  />
                  <span
                    class="stx-checkbox__mount"
                  />
                </span>
                <label
                  class="stx-checkbox-field__label"
                  for="stxField1"
                >
                  Same as shipping address
                </label>
              </div>
            </div>
          </div>
        </section>
      </div>
    </section>
  </div>
</DocumentFragment>
`;
